<resources>
    <string name="app_name">SwimChrono</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_tournaments">My Tournaments</string>
    <string name="title_club">Club</string>
    <string name="title_profile">Profile</string>
    <string name="title_chronometer">Timer</string>
    <string name="title_chronometer_race">Races</string>
    <string name="tournaments_today">Tournaments today</string>
    <string name="incoming_tournaments">Incoming Tournaments</string>
    <string name="image_of_a_swimmingpool">Image of a swimmingpool</string>
    <string name="tournament_info">Tournament info</string>
    <string name="all_races">All races</string>
    <string name="postion">Position</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="time">Time</string>
    <string name="club_info">Club Info</string>
    <string name="trainer">Trainers</string>
    <string name="members">Members</string>
    <string name="local_league">Local League</string>
    <string name="club_fluvial_lugo">Club Fluvial Lugo</string>
    <string name="members_number">Members: 100</string>
    <string name="phone">Teléfono: +34 673 45 34 54</string>
    <string name="url">URL: https://www.clubfluviallugo.com</string>
    <string name="direccion">"Rúa Fermín Rivera, s/n, 27004 Lugo"</string>
    <string name="full_info">FULL INFO</string>
    <string name="address_r_a_ferm_n_rivera_s_n_27004_lugo">Address: Rúa Fermín Rivera, s/n, 27004 Lugo</string>
    <string name="members_100">Members: 100</string>
    <string name="p_gina_web_https_www_clubfluviallugo_com">Página web: https://www.clubfluviallugo.com/</string>
    <string name="icono_del_club">Icono del club</string>
    <string name="phone_34_673_45_34_54">Phone: +34 673 45 34 54</string>
    <string name="john_doe">John Doe</string>
    <string name="profile_fragment_title">Profile Fragment</string>
    <string name="my_qr_title">My QR</string>
    <string name="telephone_example">627111111</string>
    <string name="personal_info_title">Personal Information</string>
    <string name="profile_info_nombre">Name</string>
    <string name="name_example">Alejandro</string>
    <string name="profile_info_surname">Surname</string>
    <string name="surname_example">Rodríguez Vaquero</string>
    <string name="profile_info_telephone">Phone Number</string>
    <string name="name_surname_example">Alejandro R.V.</string>
    <string name="notifications_title">Notifications</string>
    <string name="settings_title">Settings</string>
    <string name="contentDescription_back">Back</string>
    <string name="image_of_an_user">Image of an user</string>
    <string name="example_email">user@example.com</string>
    <string name="referee">Referee</string>
    <string name="swimmer">Swimmer</string>
    <string name="club">Club</string>
    <string name="race">Race</string>
    <string name="heat">Heat</string>
    <string name="lane">Lane</string>
    <string name="hour">Hour</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="lap">Lap</string>
    <string name="reset">Reset</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="scan_qr_button">Scan QR</string>
    <string name="initTimeCrono">00:00:000</string>
    <string name="resetTextButton">reset</string>
    <string name="saveButtonText">Save time</string>
    <string name="category">Category</string>
    <string name="distance">Distance</string>
    <string name="style">Style</string>
    <string name="uid">uid</string>
    <string name="dni">DNI</string>
    <string name="position">Position\n</string>
    <string name="rol">Rol</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="address">Address:</string>
    <string name="number_of_members">Number of members:</string>
</resources>