<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="es.udc.apm.swimchrono.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_club"
        android:name="es.udc.apm.swimchrono.ui.club.ClubFragment"
        android:label="@string/title_club"
        tools:layout="@layout/fragment_club_vertical" />

    <fragment
        android:id="@+id/navigation_tournaments"
        android:name="es.udc.apm.swimchrono.ui.mytournaments.MyTournamentsFragment"
        android:label="@string/title_tournaments"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="es.udc.apm.swimchrono.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>