<?xml version="1.0" encoding="utf-8"?>
<!--Linearlayout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileInfoActivity">

    <ImageView
        android:id="@+id/ivBackButton"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:contentDescription="@string/contentDescription_back"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:src="@drawable/flecha_salida" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvPersonalInfoTitle"
            style="@style/AppTextStyle.Bold"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/personal_info_title"
            android:textSize="24sp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="263dp"
                android:layout_height="43dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/celdas_profile_info"
                    android:gravity="center"
                    android:text="@string/profile_info_nombre"
                    style="@style/AppTextStyle.Bold"
                    android:textColor="@color/chronno_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/celdas_profile_info"
                    android:gravity="center"
                    android:text="@string/name_example"
                    android:textColor="@color/chronno_black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/celdas_profile_info">

                <TextView
                    android:id="@+id/tvSurnameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/celdas_profile_info"
                    android:text="@string/profile_info_surname"
                    android:gravity="center"
                    style="@style/AppTextStyle.Bold"
                    android:textColor="@color/chronno_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvSurname"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/celdas_profile_info"
                    android:gravity="center"
                    android:text="@string/surname_example"
                    android:textColor="@color/chronno_black"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/celdas_profile_info">

                <TextView
                    android:id="@+id/tvNumberTitle"
                    style="@style/AppTextStyle.Bold"
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/celdas_profile_info"
                    android:gravity="center"
                    android:text="@string/profile_info_telephone"
                    android:textColor="@color/chronno_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/celdas_profile_info"
                    android:gravity="center"
                    android:text="@string/telephone_example"
                    android:textColor="@color/chronno_black"
                    android:textSize="16sp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>