<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileMyQRActivity">

    <!-- Primera version fecha de salida-->
    <!--ImageView
        android:id="@+id/ivBackButton"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:contentDescription="@string/contentDescription_back"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:src="@drawable/flecha_salida" /-->

    <ImageView
        android:id="@+id/ivBackButton"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:contentDescription="@string/contentDescription_back"
        android:focusable="true"
        android:paddingLeft="10dp"
        android:paddingTop="12dp"
        android:src="@drawable/flecha_salida_v2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvMyQRTitle"
                style="@style/AppTextStyle.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my_qr_title"
                android:textSize="30sp" />



            <!--TextView
                android:id="@+id/tvNameQR"
                style="@style/AppTextStyle.Bold"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:gravity="center"
                android:text="@string/name_surname_example"
                android:textSize="20sp" /-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/ivCodigoQR"
            android:layout_width="300dp"
            android:layout_height="300dp"/>

        <TextView
            android:id="@+id/tvNameQR"
            style="@style/AppTextStyle.Bold"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/name_surname_example"
            android:textSize="30dp" />


    </LinearLayout>

</LinearLayout>