<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.club.ClubFragment">

    <TextView
        android:id="@+id/text_club_info"
        style="@style/AppTextStyle.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/club_info"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/item_club_card"
        layout="@layout/item_club_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/text_club_info"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/text_trainer"
        style="@style/AppTextStyle.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/trainer"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/item_club_card"
     />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/text_trainer"
        tools:listitem="@layout/item_user_card" />

    <TextView
        android:id="@+id/text_members"
        style="@style/AppTextStyle.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/members"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/trainer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/club_member_list"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:padding="5dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_members"
        app:layout_constraintVertical_bias="0.137"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/item_user_card" />

</androidx.constraintlayout.widget.ConstraintLayout>
