<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/race_number"
            style="@style/AppTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:textColor="@color/chrono_white" />


        <TextView
            android:id="@+id/race_date"
            style="@style/AppTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/chrono_white"
            app:drawableLeftCompat="@drawable/baseline_calendar_month_24"
            app:drawableTint="@color/chrono_white" />

        <TextView
            android:id="@+id/race_style"
            style="@style/AppTextStyle.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_border"
            android:padding="3dp"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/race_total"
            style="@style/AppTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/chrono_white" />

    </LinearLayout>


    <!--    FIXME: This table should be loaded dynamically and not har-coding the data-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@color/forest_blue_200">

        <!-- TableRows for each row -->
        <TableRow>
            <!-- TextViews for each column -->
            <TextView
                style="@style/AppTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/postion"
                android:textColor="@color/chrono_white" />

            <TextView
                style="@style/AppTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/name"
                android:textColor="@color/chrono_white" />

            <TextView
                style="@style/AppTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/surname"
                android:textColor="@color/chrono_white" />

            <TextView
                style="@style/AppTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/time"
                android:textColor="@color/chrono_white" />
        </TableRow>


        <TableRow>

            <TextView
                style="@style/AppTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/forest_blue_500"
                android:padding="8dp"
                android:text="1"
                android:textColor="@color/chrono_white" />

            <TextView
                style="@style/AppTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/forest_blue_500"
                android:padding="8dp"
                android:text="Susan"
                android:textColor="@color/chrono_white" />

            <TextView
                style="@style/AppTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/forest_blue_500"
                android:padding="8dp"
                android:text="Doe"
                android:textColor="@color/chrono_white" />

            <TextView
                style="@style/AppTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/forest_blue_500"
                android:padding="8dp"
                android:text="01:02:01"
                android:textColor="@color/chrono_white" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/AppTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/forest_blue_500"
                android:padding="8dp"
                android:text="2"
                android:textColor="@color/chrono_white" />

            <TextView
                android:id="@+id/grid_item2"
                style="@style/AppTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/forest_blue_500"
                android:padding="8dp"
                android:text="John"
                android:textColor="@color/chrono_white" />

            <TextView
                android:id="@+id/grid_item3"
                style="@style/AppTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/forest_blue_500"
                android:padding="8dp"
                android:text="Doe"
                android:textColor="@color/chrono_white" />

            <TextView
                android:id="@+id/grid_item4"
                style="@style/AppTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/forest_blue_500"
                android:padding="8dp"
                android:text="00:50:01"
                android:textColor="@color/chrono_white" />
        </TableRow>

    </TableLayout>


</com.google.android.material.card.MaterialCardView>

